RESOLVED FIXED 132859
[CSS Regions] Assertion failure in some cases with inline blocks
https://bugs.webkit.org/show_bug.cgi?id=132859
Summary [CSS Regions] Assertion failure in some cases with inline blocks
Andrei Bucur
Reported 2014-05-13 02:19:43 PDT
See the attached repro. If a line is pulled in a new region, the blocks contained by it don't clear the RenderBoxRegionInfo from the old region.
Attachments
Repro (1012 bytes, text/html)
2014-05-13 02:20 PDT, Andrei Bucur
no flags
Patch (16.21 KB, patch)
2014-05-13 06:54 PDT, Andrei Bucur
no flags
Patch (16.30 KB, patch)
2014-05-13 07:01 PDT, Andrei Bucur
no flags
Patch with feedback (16.28 KB, patch)
2014-05-13 07:26 PDT, Andrei Bucur
no flags
Andrei Bucur
Comment 1 2014-05-13 02:20:54 PDT
Andrei Bucur
Comment 2 2014-05-13 06:54:36 PDT
Andrei Bucur
Comment 3 2014-05-13 07:01:07 PDT
Radu Stavila
Comment 4 2014-05-13 07:04:18 PDT
Comment on attachment 231376 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=231376&action=review > Source/WebCore/rendering/RenderBlock.cpp:3877 > +bool RenderBlock::hasRegionRangeInFlowThread() const Shouldn't this method be in RenderBox?
Andrei Bucur
Comment 5 2014-05-13 07:26:32 PDT
Created attachment 231379 [details] Patch with feedback
Andrei Bucur
Comment 6 2014-05-13 07:27:00 PDT
D(In reply to comment #4) > (From update of attachment 231376 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=231376&action=review > > > Source/WebCore/rendering/RenderBlock.cpp:3877 > > +bool RenderBlock::hasRegionRangeInFlowThread() const > > Shouldn't this method be in RenderBox? Done.
Mihnea Ovidenie
Comment 7 2014-05-13 07:52:33 PDT
Comment on attachment 231379 [details] Patch with feedback r=me
WebKit Commit Bot
Comment 8 2014-05-13 23:34:21 PDT
Comment on attachment 231379 [details] Patch with feedback Clearing flags on attachment: 231379 Committed r168791: <http://trac.webkit.org/changeset/168791>
WebKit Commit Bot
Comment 9 2014-05-13 23:34:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.